--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ REACT_APP_STORAGE_BUCKET="portfolio-5ed5a.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="746004058161"
 REACT_APP_APP_ID="1:746004058161:web:6eb70df13e1ee074988510"
 REACT_APP_MEASUREMENT_ID="G-XCTEYXWH7D"
+
+REACT_APP_SERVICE_ID="service_md5djfb"
+REACT_APP_TEMPLATE_ID="template_b01gsrh"
+REACT_APP_PUBLIC_KEY="3rnehdqZ11xG6wL2G"
+
